--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <title>Phobos</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style/index.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox.js/4.0.30/Dropbox-sdk.min.js"></script>
 </head>
 <body>
   <nav id="top-menu">
