restored http-server for local dev, fixed router imports

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     import LoginView from '/components/LoginView.js';
     import NotFoundView from '/components/NotFoundView.js';
 
-    import { Router } from '../node_modules/@vaadin/router';
+    import { Router } from 'https://unpkg.com/@vaadin/router';
 
     const router = new Router(document.getElementById('route-base'));
     router.setRoutes([
