implemented FileLoader.load and .resolveAndLoad (with tests)

--- a/src/test.html
+++ b/src/test.html
@@ -15,10 +15,10 @@
 
   <script>mocha.setup('bdd')</script>
 
-  <script type="module" src="/temp-test/parseFileMetadata.test.js"></script>
-  <!-- <script type="module" src="/temp-test/FileLoader.test.js"></script> -->
-  <script type="module" src="/temp-test/score.test.js"></script>
-  <script type="module" src="/temp-test/resolver.test.js"></script>
+  <!-- <script type="module" src="/temp-test/parseFileMetadata.test.js"></script> -->
+  <script type="module" src="/temp-test/FileLoader.test.js"></script>
+  <!-- <script type="module" src="/temp-test/score.test.js"></script> -->
+  <!-- <script type="module" src="/temp-test/resolver.test.js"></script> -->
 
   <script type="module">
       mocha.checkLeaks();
