--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,9 @@
 <html>
-<title>Phobos</title>
+<head>
+	<title>Phobos</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+</head>
 <body>
 	<div id="root"></div>
 	<script src="index.jsx"></script>
